# libslac

./: .gitignore  CMakeLists.txt  README.rst  THIRD_PARTY.rst  combine.py  library.json  output.txt  platformio.ini  run_tests.sh
.github/workflows/: build-example.yml
cmake/: slac-config.cmake.in
docs/: BoardExample.md  HomePlugGreenPhy.md  ISO15118-3.md  Logging.md  PLCStampMicro_ESP32S3_Wiring.md  PlatformIOExample.md  QCA700X.md  QCA_SPI.md  STAMPMICRO.md  qca7000-bring-up.md  qca7000-troubleshooting.md
examples/esp32_board_example/: platformio.ini
examples/esp32_board_example/src/: main.cpp
examples/pio/: main.cpp  polling_example.cpp
examples/platformio_basic/: platformio.ini
examples/platformio_basic/src/: main.cpp
examples/platformio_basic/test/: test_basic.cpp
examples/platformio_complete/: .gitignore  .gitmodules  CMakeLists.txt  README.md  pio-build_libcbv2g.py  platformio.ini
examples/platformio_complete/lib/libcbv2g/: CMakeLists.txt
examples/platformio_complete/lib/libcbv2g/lib/cbv2g/: CMakeLists.txt
examples/platformio_complete/lib/slac_port/: library.json
examples/platformio_complete/lib/slac_port/esp32s3/: port_config.hpp  qca7000.cpp  qca7000.hpp  qca7000_link.cpp  qca7000_link.hpp  qca7000_uart.cpp  qca7000_uart.hpp
examples/platformio_complete/lib/slac_port/esp_adc/: adc_continuous_stub.c
examples/platformio_complete/lib/slac_port/esp_adc/esp_adc/: adc_continuous.h
examples/platformio_complete/src/: CMakeLists.txt  adc_continuous_stub.cpp  cp_config.h  cp_monitor.cpp  cp_monitor.h  cp_pwm.cpp  cp_pwm.h  cp_state_machine.cpp  cp_state_machine.h  main.cpp  plc_irq.hpp
examples/platformio_complete/src/esp_adc/: adc_continuous_stub.c
examples/platformio_complete/test/: test_basic.cpp  test_custom_pins.cpp  test_slac_nmk.cpp
include/: fsm  hash_library
include/fsm/: buffer.hpp
include/fsm/_impl/: common.hpp  state_allocator.hpp
include/hash_library/: sha256.cpp
include/port/: logging_compat.hpp  port_common.hpp
include/port/esp32s3/: ethernet_defs.hpp  port_config.hpp  qca7000.hpp  qca7000_link.cpp  qca7000_link.hpp  qca7000_uart.cpp  qca7000_uart.hpp  serial_logger.h
include/slac/: channel.hpp  config.hpp  endian.hpp  ethernet_defs.hpp  fsm.hpp  iso15118_consts.hpp  match_log.hpp  packet_socket.hpp  packet_socket_link.hpp  slac.hpp  slac_states.hpp  transport.hpp
include/slac/platform/: if_ether.hpp  if_packet.hpp  ifaddrs.hpp
main/: CMakeLists.txt  main.cpp
pio_src/: main.cpp
port/: port_common.hpp
port/esp32s3/: endian_compat.hpp  ethernet_defs.hpp  port_config.hpp  qca7000.cpp  qca7000.hpp  qca7000_link.cpp  qca7000_link.hpp  qca7000_uart.cpp  qca7000_uart.hpp
port/esp_adc/: adc_continuous_stub.c
port/esp_adc/esp_adc/: adc_continuous.h
port/generic/: port_config.hpp
port/microcontroller/: endian_compat.hpp  ethernet_defs.hpp  port_config.hpp  qca7000.cpp  qca7000.hpp  qca7000_link.hpp  qca7000_uart.hpp
src/: channel.cpp  config.cpp  match_log.cpp  packet_socket.cpp  packet_socket.hpp  packet_socket_link.cpp  slac.cpp
tests/: CMakeLists.txt  SPI.h  arduino_stubs.hpp  cp_monitor_mocks.cpp  cp_monitor_mocks.hpp  esp_intr_alloc.h  esp_pm.h  esp_random.h  esp_timer.h  evse_fsm_test.cpp  libslac_unit_test.cpp  qca7000_hal_mock.cpp  qca7000_test.cpp  qca7000_uart_test.cpp  test_bcb_wakeup.cpp  test_channel.cpp  test_check_alive.cpp  test_cp_monitor.cpp  test_cp_pwm.cpp  test_cp_state_machine.cpp  test_endian.cpp  test_fsm.cpp  test_fsm_buffer.cpp  test_hard_reset.cpp  test_log_task.cpp  test_mv2state.cpp  test_nid.cpp  test_parm_retry.cpp  test_payload.cpp  test_plc_irq.cpp  test_qca7000_fetch_rx.cpp  test_qca7000_link.cpp  test_qca7000_reset.cpp  test_reset.cpp  test_rx_overflow.cpp  test_rx_ring.cpp  test_sha256.cpp  test_slac_filter.cpp  test_slac_retry.cpp  test_validation.cpp  (+1 more)
tests/driver/: gpio.h  ledc.h  timer.h
tests/esp_adc/: adc_continuous.h  adc_oneshot.h
tests/freertos/: FreeRTOS.h  task.h  timers.h
tests/soc/: ledc_struct.h
tests/stubs/: Arduino.h  HardwareSerial.cpp  HardwareSerial.h  SPI.cpp  SPI.h  esp_log.h  esp_system.h
tools/: CMakeLists.txt  bridge.cpp  logging.hpp
tools/evse/: CMakeLists.txt  evse.cpp  evse_fsm.cpp  evse_fsm.hpp  packet_socket.cpp  packet_socket.hpp  packet_socket_link.cpp  packet_socket_link.hpp  slac_io.cpp  slac_io.hpp
